# MyQtWidgetLibrary

./: .gitignore  CMakeLists.txt  README.md  convert_charset.py
src/: main.cpp
src/CVEditorWidget/: CMakeLists.txt
src/CVEditorWidget/forms/: main_widget.qrc.depends
src/CVEditorWidget/src/: display_widget.h  main_widget.h
src/CameraMenu/: CMakeLists.txt
src/CameraMenu/forms/: camera_menu.qrc  main_widget.qrc
src/CameraMenu/src/: camera_menu.cpp  item_listwidget.cpp  item_listwidget.h  main_widget.cpp  my_tabwidget.h  title.cpp  title.h
src/CameraMenu2/: CMakeLists.txt
src/CameraMenu2/forms/: resources.qrc
src/CameraMenu2/src/: camera_menu.cpp  display_widget.cpp  display_widget.h  item_listwidget.cpp  main_widget.cpp  main_widget.h  title.cpp
src/CameraPreview/: CMakeLists.txt
src/CameraPreview/forms/: camera_preview_widget.ui  resources.qrc
src/CameraPreview/src/: camera_menu.cpp  camera_menu.h  camera_preview_widget.cpp  camera_preview_widget.h  display_widget.cpp  display_widget.h  item_listwidget.h  main_widget.cpp  main_widget.h  media_player_gui_class.cpp  media_player_gui_class.h  media_src_dialog.cpp  render_widget.cpp  render_widget.h  title.h
src/CefWidget/: CMakeLists.txt
src/ControlBar/: CMakeLists.txt
src/ControlBar/forms/: resources.qrc
src/ControlBar/src/: control_bar.cpp  control_bar.h  custom_slider.h  round_widget.cpp  volume_button.cpp  volume_button.h  volume_slider_dialog.cpp  volume_slider_dialog.h
src/CustomStyle/: CMakeLists.txt
src/CustomStyle/src/: donut_custom_slider.cpp  donut_custom_slider.h  donut_style.cpp  donut_style.h  main.cpp  round_widget.cpp
src/DialogBase/: CMakeLists.txt
src/DialogBase/forms/: resources.qrc
src/DialogBase/src/: dialog_content_widgets.cpp  media_src_dialog.cpp  media_src_dialog.h  my_tabwidget.cpp  my_tabwidget.h  round_widget.cpp
src/DisplayWidget/: CMakeLists.txt
src/DisplayWidget/src/: display_widget.cpp  main.cpp  title.cpp
src/DonutCustomStyle/: CMakeLists.txt
src/DonutCustomStyle/src/: round_widget.cpp  round_widget.h
src/DonutCustomStyleWidgets/: CMakeLists.txt
src/DonutCustomStyleWidgets/src/: main.cpp  round_widget.cpp
src/DonutEditor/: CMakeLists.txt
src/DonutEditor/forms/: camera_menu.ui  desktop_tab.ui  media_manager.ui  panel_widget.ui  screen_selection_dialog.ui
src/DonutEditor/src/: media_manager.cpp  media_manager.h
src/DonutQGLEngine/: CMakeLists.txt  cmake_install.cmake
src/DonutQGLEngine/src/: display_widget.cpp  main_widget.cpp  title.h
src/DoubleSlider/: CMakeLists.txt  cmake_install.cmake
src/DoubleSlider/forms/: double_slider.ui  resources.qrc
src/DoubleSlider/src/: QxtSpanSlider.cpp  donut_slider_custom_style.cpp  donut_slider_custom_style.h  double_slider.cpp  double_slider.h  main.cpp  round_widget.cpp  round_widget.h
src/FramelessWidget/: CMakeLists.txt
src/FramelessWidget/forms/: FramelessWidget.qrc  frameless_widget.ui
src/FramelessWidget/src/: frameless_widget.cpp  frameless_widget.h  main.cpp  title.cpp  title.h
src/FramelessWidget2/: CMakeLists.txt
src/FramelessWidget2/forms/: MainWidget.qrc
src/FramelessWidget2/src/: frameless_widget.cpp  frameless_widget.h  main.cpp  main_widget.cpp  main_widget.h  title_bar.cpp  title_bar.h
src/GraphicsViewBase/: CMakeLists.txt
src/GraphicsViewBase/src/: main.cpp
src/MainWidget/: CMakeLists.txt
src/MainWidget/forms/: main_widget.ui  title.qrc
src/MainWidget/src/: main_widget.cpp  main_widget.h
src/MediaPlayerVLC/: CMakeLists.txt
src/MediaPlayerVLC/forms/: camera_menu.ui  display_widget.ui  main_widget.ui
src/MediaPlayerVLC/src/: camera_menu.cpp  camera_menu.h  display_widget.cpp  display_widget.h  item_listwidget.cpp  main.cpp  main_widget.cpp  main_widget.h  media_player_gui_class.cpp  media_player_gui_class.h  menu_bar.cpp  render_widget.cpp  render_widget.h  title.cpp  title.h  vlc_manager.cpp  vlc_manager.h
src/MenuButton/: CMakeLists.txt
src/MenuButton/forms/: menu_button.qrc
src/MenuButton/src/: menu_button.cpp  menu_button.h  round_widget.cpp  round_widget.h
src/OffscreenRenderer/: CMakeLists.txt
src/OffscreenRenderer/src/: glwidget.cpp  renderthread.cpp
src/Painting/: CMakeLists.txt
src/Painting/forms/: Painting.qrc
src/Painting/src/: main.cpp  round_widget.h
src/PlayerBase/: CMakeLists.txt
src/PlayerBase/forms/: dialog_title.ui  item_set_dialog.ui  resources.qrc
src/PlayerBase/forms/res/css/: dialog_title.css
src/PlayerBase/src/: camera_menu.cpp  camera_menu.h  dialog_base.cpp  dialog_title.cpp  dialog_title.h  display_widget.cpp  item_set_dialog.h  main_widget.h
src/RoundWidget/src/: round_widget.cpp
src/ScreenCaptureDialog/: CMakeLists.txt
src/ScreenCaptureDialog/forms/: desktop_tab.ui  dialog_title.ui  screen_capture_dialog.qrc
src/ScreenCaptureDialog/src/: dialog_content_widgets.cpp  dialog_content_widgets.h  dialog_title.cpp  dialog_title.h  main.cpp  media_src_dialog.cpp  media_src_dialog.h  my_tabwidget.cpp  my_tabwidget.h  round_widget.cpp  screen_capture_dialog.cpp  screen_capture_dialog.h
src/ScreenSplitter/: CMakeLists.txt
src/ScreenSplitter/forms/: manager.qrc  manager.ui
src/ScreenSplitter/src/: elwidget.cpp  elwidget.h  item_listwidget.cpp  json_proc.cpp  json_proc.h  main.cpp  manager.cpp  manager.h  menu_bar.cpp  menu_bar.h  screen_configuration.cpp  screen_configuration.h  screen_scroll_area.cpp  screen_scroll_area.h
src/ScrollAreaDialog/: CMakeLists.txt
src/ScrollAreaDialog/forms/: resources.qrc  screen_capture_dialog.ui
src/ScrollAreaDialog/src/: main.cpp  round_widget.cpp
src/Template/: CMakeLists.txt
src/ThreadTest/: CMakeLists.txt
src/ThreadTest/src/: main.cpp  move_to_thread_widget.cpp  move_to_thread_widget.h  round_widget.cpp  thread1.cpp  thread1.h  thread2.cpp  thread2.h  thread3.cpp  thread3.h
src/Title/: CMakeLists.txt
src/Title/forms/: title.ui
src/Title/src/: round_widget.cpp  round_widget.h  title.cpp
src/VolumeButton/: CMakeLists.txt
src/VolumeButton/forms/: resources.qrc  volume_button.qrc
src/VolumeButton/src/: custom_slider.cpp  custom_slider.h  round_widget.h  (+5 more)
(+174 files in other folders)
